# estenio

./: .gitignore  CONTEXT.md  README.md  estenio.spec  pyproject.toml
.github/workflows/: release.yml
plans/: installer-cross-platform.md
scripts/: build.sh  bundle-ffmpeg.sh  install.ps1  install.sh  release.sh
src/estenio/: __init__.py  checks.py  downloader.py  main.py  steps.py  updater.py
tests/: test_checks.py  test_downloader.py  test_init.py  test_installers.py  test_main.py  test_steps.py  test_updater.py  test_version.py
