[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "estenio"
version = "0.2.0"
description = "Interactive CLI for downloading media from online platforms"
requires-python = ">=3.10"
dependencies = [
    "questionary>=2.0.0",
    "rich>=13.0.0",
]
optional-dependencies.dev = [
    "pytest>=8.0.0",
]

[project.scripts]
estenio = "estenio.main:main"

[tool.setuptools.packages.find]
where = ["src"]
